is_component_build = true
is_debug = false
target_cpu = "arm64"
v8_target_cpu = "arm64"
use_goma = false
v8_enable_backtrace = true
v8_enable_i18n_support = false
v8_use_zlib = false
v8_enable_webassembly = false
v8_enable_disassembler = false
v8_enable_object_print = false
v8_enable_verify_heap = false
dcheck_always_on = false
